src/main/resources/static/scss/editor.scss
@charset "UTF-8";

/**
 * Copyright (C) 2025 Heber Ferreira Barra, João Gabriel de Cristo, Matheus Jun Alves Matuda.
 *
 * Licensed under the Massachusetts Institute of Technology (MIT) License.
 * You may obtain a copy of the license at:
 *
 *     https://choosealicense.com/licenses/mit/
 *
 * A short and simple permissive license with conditions only requiring preservation of copyright and license notices.
 * Licensed works, modifications, and larger works may be distributed under different terms and without source code.
 */

@use "estiloComum";
@use "estiloHeader";
@use "estiloTracinho";

$estiloBordaPainel: var(--cor-borda) solid 0.1rem;

body {
  display: grid;
  grid-template-columns: 20% 60% 20%;
  grid-template-rows: 5rem 5rem calc(100% - 10rem);
  max-width: 100vw;
  overflow: auto;
  &:has(#painel-direito.hidden) {
    grid-template-columns: 20% 80%;
  }

  &:has(#painel-esquerdo.hidden) {
    grid-template-columns: 80% 20%;
    main{
      grid-column: 1;
    }
  }

  &:has(#painel-direito.hidden):has(#painel-esquerdo.hidden) {
    grid-template-columns: 100%;
    main{
      grid-column: 1;
    }
  }

}

header {
  grid-column: 1 / 4;
  grid-row: 1;
  height: 5rem;
  position: fixed;
  top: 0;
  left: 0;
}

main {
  grid-column: 2;
  grid-row: 3 / 4;
  background-color: var(--cor-fundo-area-de-edicao);
  width: 95%;
  height: 95%;
  justify-self: center;
  align-self: center;
  border: 0.2rem solid var(--cor-borda);
  overflow: scroll;
  background-image:
    repeating-linear-gradient(
      var(--cor-grade-horizontal) 0 var(--espessura-grade),
      transparent 1px 100%
    ),
    repeating-linear-gradient(
      90deg,
      var(--cor-grade-vertical) 0 var(--espessura-grade),
      transparent 1px 100%
    );
  background-size: var(--tamanho-quadrado-grade) var(--tamanho-quadrado-grade);
}

.barra-de-tarefas {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--cor-painel-lateral);
  grid-row: 2;
  height: 5rem;
  column-gap: 2rem;
  top: 5rem;
  width: 100%;
  grid-column: 1 / 4;
  border-bottom: 0.1rem solid var(--cor-borda);
  position: fixed;

  button, summary{
    background-color: unset;
    z-index: 2;
  }

  button:hover, summary:hover {
    svg {
      transform: scale(1.2);
      transition: 0.5s;

      .svg-cor-contorno {
        color: var(--cor-botao-hover);
      }
    }
  }

  .menu-opcoes{
    position: relative;
    display: inline-block;
  }

  summary {
    list-style: none;
    cursor: pointer;
    display: flex;
    align-items: center;
    padding: 0.5rem;
    outline: none;
  }

  .mostrar-conteudo {
    display: flex;
    flex-direction: column;
    position: absolute;
    z-index: 10;
    top: 100%;
    background-color: var(--cor-fundo-menu);
    border: 0.01rem solid var(--cor-borda);
    border-radius: 0.2rem;
    min-width: 22rem;
    height: auto;
    padding: 0.8rem 0.8rem;
  }

  #menu-pagina{
    display: flex;
    flex-direction: row;
    position: absolute;
    z-index: 30;
    top: 100%;
    background-color: var(--cor-fundo-menu);
    border: 0.01rem solid var(--cor-borda);
    height: auto;
    max-width: 40rem;
    overflow-x: scroll;
    padding: 1.5rem 2rem;
    column-gap: 0.5rem;

    .pagina-selecao {
      min-height: 9rem;
      min-width: 12rem;
      border: 0.2rem solid var(--cor-borda);
      border-radius: unset;
      justify-content: center;
      align-content: center;

      & > span{
        font-size: 4rem;
        color: var(--cor-fonte-alternativa);
      }
    }
  }

  .comando {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 1rem;
  }

  .comando:hover{
    background-color: var(--cor-fundo-input);
  }

  .itens-menu {
    color: var(--cor-letra-alternativa);
    font-size: 1.2rem;
  }

  .atalho {
    color: var(--cor-fonte-clara);
    font-size: 1rem;
  }


  details[open] summary {
    svg {
      transform: scale(1.2);
      transition: 0.5s;

      .svg-cor-contorno {
        color: var(--cor-botao-hover);
      }
    }
  }

  hr {
    border: 0;
    border-top: 0.3rem solid var(--cor-fundo-input-focus);
    margin: 0.5rem 0;
  }

  details[open] > summary::before{
    content: "";
    position: fixed;
    z-index: 11;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  svg {
    height: 3rem;
    width: 3rem;
    pointer-events: none;
  }

  .svg-cor-contorno {
    color: var(--cor-botao);
  }

  .svg-cor-completar {
    color: var(--cor-painel-lateral);
  }
}

aside#painel-esquerdo {
    display: flex;
  flex-direction: column;
}

aside#painel-esquerdo {
    display: flex;
  flex-direction: column;
}

aside {
  background-color: var(--cor-painel-lateral);
  color: var(--cor-fonte-alternativa);
  grid-row: 2 / 4;
  height: calc(100vh - 5rem);
  padding: 1rem;
  z-index: 1;
  position: fixed;
  top: 5rem;
  width: 20%;

  h2 {
    text-align: center;
    font-size: 1.2rem;
  }

  section {
    overflow: auto;
  }

  button.btn-esconder,
  button.btn-mostrar {
    background-color: var(--cor-botao-painel-lateral);
    border: $estiloBordaPainel;
    border-radius: 0;
    color: var(--cor-fonte-alternativa);
    z-index: 2;
    font-size: 1.5rem;
    width: 2rem;
    aspect-ratio: 1 / 1;
    padding: 0;

    &:hover {
      background-color: var(--cor-botao-hover-painel-lateral);
    }
  }

  button.btn-mostrar {
    display: none;
  }

  button.btn-esconder {
    position: relative;
    top: calc(50% - 3rem);
  }

  section#propriedades {
    gap: 0.7rem;

    label {
      display: grid;
      grid-template-columns: 60% 40%;
      text-align: left;
      width: 80%;
    }
  }

  &#painel-esquerdo {
    grid-column: 1;
    border-right: $estiloBordaPainel;
    left: 0;

    button.btn-esconder {
      right: calc(-100% + 0.5rem);
    }
  }

  &#painel-direito {
    grid-column: 3;
    border-left: $estiloBordaPainel;
    right: 0;

    button.btn-esconder {
      left: -1.5rem;
    }
  }
}

aside.hidden {
  width: 0;
  height: 0;
  background-color: transparent;
  border: medium;

  button.btn-esconder {
    display: none;
  }

  button.btn-mostrar {
    position: fixed;
    display: block;
    top: 6rem;
  }

  &#painel-esquerdo button.btn-mostrar {
    left: 5px;
  }

  &#painel-direito button.btn-mostrar {
    right: 5px;
  }
}

section.pagina {
  width: 100%;
  height: 30%;
  row-gap: 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.secao-pagina{
  display: flex;
  flex-direction: row;
  column-gap: 1rem;

  svg{
    width: 1.2rem;
    height: 1.2rem;
  }
}

section#componentes {
  height: 90%;
  gap: 1rem;
  overflow: scroll;
}

section#diagramas > section {
  display: grid;
  grid-template-columns: 50% 50%;
  width: 70%;

  h2 {
    grid-column: span 2;
    margin: 1rem 0;
  }

  label {
    justify-self: center;
  }
}

section#propriedades{
  height: 25%;
}

section#seletor-tipos-conexao {
  gap: 0.5rem;
  height: 20%;

  label {
    display: grid;
    grid-template-columns: 20% 80%;
    width: 100%;
  }
}

fieldset.componentes-diagrama {
  align-items: center;
  border: $estiloBordaPainel;
  border-radius: 0.5rem;
  display: grid;
  gap: 1rem;
  padding: 0.5rem;
  width: 95%;
  margin-bottom: 1.5rem;
  grid-template-columns: repeat(2, calc(50% - 0.25rem));

  button {
    align-items: center;
    aspect-ratio: 1 / 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    justify-self: center;
    width: 95%;

    h4 {
      pointer-events: none;
    }

    h3 {
      font-size: 0.85rem;
    }

    svg {
      aspect-ratio: 1 / 1;
      pointer-events: none;
      color: var(--cor-fundo);
      width: 100%;
      height: 70%;

      .svg-cor-borda {
        color: var(--cor-borda);
      }

      .svg-cor-fundo {
        color: var(--cor-botao);
      }

    }

  }

  legend {
    text-align: center;
    width: 100%;
  }

}

fieldset#conexoes-basicas {
  display: flex;
  flex-direction: column;
  padding: 0.5rem;
  gap: 0.2rem;
  width: 90%;

  button {
    width: 100%;
  }
}

.componente {
  display: flex;
  background-color: var(--cor-fundo);
  align-items: center;
  justify-content: center;
  position: absolute;
  cursor: crosshair;
  width: 150px;
  height: 100px;
  border: var(--cor-borda) solid 0.3rem;

  &:hover {
    background-color: var(--cor-componente-hover);
  }

  &.dragging {
    cursor: grabbing;
  }

  &.selected,
  &:hover {
    border-color: var(--cor-borda-componente-selecionado);
  }
}

.ponto-extensor {
  border-radius: 50%;
  border: var(--cor-borda-ponto-extensor) solid 0.3rem;
  background-color: var(--cor-ponto-extensor);
  height: 1rem;
  position: absolute;
  width: 1rem;
  z-index: 3;

  &:hover {
    background-color: var(--cor-hover-ponto-extensor);
  }

}

.seta {
  position: absolute;
  width: 2rem;
  height: 1.5rem;
  background: var(--cor-borda);
  clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
  opacity: 0;
  z-index: 1;

  &:hover {
    background: var(--cor-borda-componente-selecionado);
    opacity: 1;
  }
}

.seletor-tipo-conexao {
  z-index: 5;
  display: flex;
  gap: 0.2rem;
  width: fit-content;
  height: fit-content;
  background-color: var(--cor-fundo);
  border: var(--cor-borda) solid 0.3rem;
  border-radius: 0.5rem;
  padding: 0.2rem;

  button {
    padding: 0.2rem;
    width: fit-content;
    height: fit-content;
    font-size: 10pt;
  }
}

